Improve sticky table column style and fix z-index of tables inside details components

--- a/src/nationalarchives/utilities/tables/_index.scss
+++ b/src/nationalarchives/utilities/tables/_index.scss
@@ -207,6 +207,13 @@ $table-overflow-shadow-width: 1.5rem;
   }
 
   &--sticky-first-column {
+    background: radial-gradient(
+        ellipse #{$table-overflow-shadow-width} 50% at right center,
+        var(--right-shadow),
+        rgb(0 0 0 / 0%)
+      )
+      transparent;
+
     .tna-table {
       &__header,
       &__cell {
